[package]
name = "serde_yaml"
version = "0.9.34"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "parser-implementations"]
description = "YAML data format for Serde"
documentation = "https://docs.rs/serde_yaml/"
edition = "2021"
keywords = ["yaml", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/serde-yaml"
rust-version = "1.64"

[dependencies]
indexmap = "2.6.0"
itoa = "1.0.11"
ryu = "1.0.18"
serde = "1.0.210"
unsafe-libyaml = "0.2.11"

[dev-dependencies]
anyhow = "1.0.89"
indoc = "2.0.5"
serde_derive = "1.0.210"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
